syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";  
import "Protos/messages.proto" ;


option csharp_namespace = "grpcserv1";
package secondvariety;

service GGetTokensServ {
  rpc GetToken(GGetTokenClaims) returns(GClaim);
}

